managed to get the spacing correctly for desktop, the mobile version, the image doesn't seem to scale proportionally

--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,57 @@
 }
 
 .card-text{
-    font-size: 12px;
+    font-size: 13px;
     color: #6E8098;
     font-weight: 500;
     font-family: 'Manrope', sans-serif;
+    line-height: 1.538;
 }
 
 .card-title {
     font-size: 20px;
     font-weight: 700;
     font-family: 'Manrope', sans-serif;
+    color: #48556A;
+    line-height: 1.4;
+    
+}
+
+#footer-name {
+    font-size: 13;
+    color: #48556A;
+    font-weight: 700;
+    line-height: 1.538;
+    font-family: 'Manrope', sans-serif;
+    margin-left: 10px;
+}
+
+#footer-date {
+    font-family: 'Manrope', sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 1.538;
+    color: #9DAEC2;
+    margin-left: 10px;
+
+}
+
+#footer-image {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    float: left;
+}
+
+#card-image {
+    width: 340px;
+    height: auto;
+}
+
+.card-body {
+    background-color: white;
+    z-index: 1;
+    height: 100%;
+    width: 385px;
+    margin-left: 50px;
 }
